Started playlist with Spotify support

--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "pi-gpio": "~0.0.2",
     "lame": "~1.0.2",
     "icecast": "~1.2.0",
-    "speaker": "git://github.com/aferre/node-speaker.git"
+    "speaker": "git://github.com/aferre/node-speaker.git",
+    "spotify-web": "git://github.com/TooTallNate/node-spotify-web.git"
   },
   "keywords": []
 }
